gitops/base/kafka-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka
  namespace: token-price-service
  labels:
    app: kafka
spec:
  ports:
    - name: kafka
      port: 9092
      targetPort: 9092
  selector:
    app: kafka
