gitops/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: token-price-service
spec:
  selector:
    app: token-price-service
  ports:
  - port: 3000
    targetPort: 3000
