gitops/base/zookeeper-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zookeeper
  namespace: token-price-service
  labels:
    app: zookeeper
spec:
  selector:
    app: zookeeper
  ports:
    - name: client
      port: 2181
      targetPort: 2181
